--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ editor/lib
 editor/js/editor.js
 editor/js/templates.js
 editor/css
+platforms/android/bin/dexedLibs/cordova-2.9.0-93cf26563ea24777a358fd96cf85de41.jar
+www/cordova.js
+www/cordova_plugins.js
+www/cordova_plugins.json
