Gitignore cordova log for ios, increase walls size, move UI canvas rendering into game rendering loop

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ platforms/android/assets
 platforms/ios/CordovaLib/build
 platforms/ios/build/
 platforms/ios/www/
+platforms/ios/cordova/console.log
