--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ editor/js/editor.js
 editor/js/templates.js
 editor/css
 platforms/android/bin/dexedLibs/cordova-2.9.0-93cf26563ea24777a358fd96cf85de41.jar
-platforms/ios/FlickBlaster.xcodeproj/project.xcworkspace/xcuserdata/tancreditrugenberger
+platforms/ios/FlickBlaster.xcodeproj/project.xcworkspace/xcuserdata/
 www/cordova.js
 www/cordova_plugins.js
 www/cordova_plugins.json
