--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "0.0.0",
   "author": "Tancredi Trugenberger",
   "scripts": {
-    "start": "coffee server.coffee"  
+    "start": "coffee server.coffee"
   },
   "dependencies": {
     "express": "~3.3.4"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-less": "~0.5.1",
-    "grunt-contrib-watch": "~0.4.3",
-    "grunt-browserify2": "~0.1.7",
-    "grunt-exec": "~0.4.2",
-    "grunt-parallel": "~0.1.0",
-    "grunt-contrib-handlebars": "~0.5.9",
     "coffee-script": "~1.6.3",
-    "browserify": "~2.31.0"
+    "browserify": "~2.31.0",
+    "watch-tree-maintained": "~0.1.2",
+    "async": "~0.2.9",
+    "cli-color": "~0.2.3",
+    "less": "~1.4.2",
+    "handlebars": "~1.0.12"
   }
 }
