--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "start": "coffee server.coffee"
   },
   "dependencies": {
-    "express": "~3.3.4"
+    "express": "~3.3.x"
   },
   "devDependencies": {
-    "coffee-script": "~1.6.3",
-    "browserify": "~2.31.0",
-    "watch-tree-maintained": "~0.1.2",
-    "async": "~0.2.9",
-    "cli-color": "~0.2.3",
-    "less": "~1.4.2",
-    "handlebars": "~1.0.12"
+    "coffee-script": "~1.6.x",
+    "browserify": "~2.31.x",
+    "watch-tree-maintained": "~0.1.x",
+    "async": "~0.2.x",
+    "cli-color": "~0.2.x",
+    "less": "~1.4.x",
+    "handlebars": "~1.0.1x"
   }
 }
