--- a/platforms/ios/FlickBlaster/FlickBlaster-Info.plist
+++ b/platforms/ios/FlickBlaster/FlickBlaster-Info.plist
@@ -20,6 +20,7 @@
           <string>icon@2x.png</string>
           <string>icon-72.png</string>
           <string>icon-72@2x.png</string>
+          <string>icon-57@2x.png</string>
         </array>
         <key>UIPrerenderedIcon</key>
         <true/>
