--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@ www/js/templates.js
 www/compiled.css
 platforms/android/bin/dexedLibs/cordova-2.9.0-93cf26563ea24777a358fd96cf85de41.jar
 platforms/ios/FlickBlaster.xcodeproj/project.xcworkspace/xcuserdata/
-www/cordova.js
-www/cordova_plugins.js
-www/cordova_plugins.json
+*.xcuserdatad/
+*xcshareddata/
 platforms/android/bin
 platforms/android/gen
 platforms/android/assets
