--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ lib
 www/js/app.js
 www/js/templates.js
 www/compiled.css
+www/cache.manifest
 platforms/android/bin/dexedLibs/cordova-2.9.0-93cf26563ea24777a358fd96cf85de41.jar
 platforms/ios/FlickBlaster.xcodeproj/project.xcworkspace/xcuserdata/
 *.xcuserdatad/
