--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "codo": "~1.9.0",
     "retina-downsizer": "0.0.x",
     "optimist": "~0.6.0",
-    "uglify-js": "~2.4.0"
+    "uglify-js": "~2.4.0",
+    "walkdir": "0.0.7"
   }
 }
