--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "cli-color": "~0.2.x",
     "less": "~1.4.x",
     "handlebars": "~1.0.1x",
-    "codo": "~1.9.0",
+    "codo": "~1.9.x",
     "retina-downsizer": "0.0.x",
     "optimist": "~0.6.x",
     "uglify-js": "~2.4.x",
-    "walkdir": "0.0.x",
-    "underscore": "~1.5.x"
+    "walkdir": "0.0.x"
   }
 }
